# C-Game

./: .gitignore  CMakeLists.txt  README.md  core.h  launch.sh
.VSCodeCounter/2021-10-19_13-59-23/: details.md  results.csv  results.md  results.txt
res/: blocks.txt
res/shaders/: defaultFragShader.glsl  defaultVertexShader.glsl
res/textures/: atlas.afphoto
src/: blockTextures.c  blockTextures.h  camera.c  camera.h  chunk.c  chunk.h  core.h  input.c  input.h  main.c  noise.c  noise.h  render.c  render.h  shaderProgram.c  shaderProgram.h  texture.c  texture.h  window.c  window.h
src/blocks/: block.c  block.h  blockTextures.c  blockTextures.h
src/engine/shaders/: defaultFragShader.glsl  defaultVertexShader.glsl
src/engine/src/: camera.c  camera.h  chunk.c  chunk.h  core.h  input.c  input.h  render.c  render.h  shaderProgram.c  shaderProgram.h  texture.c  texture.h  window.c  window.h
src/engine/src/blocks/: block.c  block.h  blockTextures.c  blockTextures.h
src/game/: main.c
src/game/scenes/: testScene.c
src/game/src/: main.c
src/game/src/scenes/: testScene.c  testScene.h
src/scenes/: testScene.c  testScene.h
